<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img1"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo2"
        android:layout_marginStart="-150dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/discripText"
        android:contentDescription="@string/store_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/discripText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/discription_text"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/rLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:ignore="TextSizeCheck" />

    <RelativeLayout
        android:id="@+id/rLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/discripText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signinBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom"
            android:text="@string/sign_in"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:textColor="#fff"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@id/signinBtn1"
            android:background="@drawable/button_custom"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="#fff"
            android:textSize="25sp" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>